--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,68 @@
-p {
-    color: blue;
-    font-size: 100px;
+html,body{
+    margin: 0;
+    padding: 0;
+}
+
+.rouge{
+    color: red;
+}
+
+.panels{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+}
+.panel{
+    height: 100%;
+    flex:1;
+    transition: flex 1s;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+}
+
+.carousel{
+    background-size: 10%;
+    carousel-control-width: 15%;
+}
+
+.panel:hover{
+    flex:4
+}
+
+.panel>.titreJeu:hover{
+    opacity: 100%;
+}
+
+.minecraft{
+    background-image: url("../img/minecraft.jpg");
+}
+
+.tft{
+    background-image: url("../img/tft.jpg");
+    background-size: 80%;
+}
+
+.hades{
+    background-image: url("../img/hades.jpg");
+  
+}
+.overwatch{
+    background-image: url("../img/overwatch.jpg");
+
+}
+
+
+.titreJeu{
+    color: white;
+    font-size: 4em;
+    font-family: 'Roboto';
+    opacity: 0%;
+    transition: opacity 1s;
 }
