--- a/css/jeuTFT.css
+++ b/css/jeuTFT.css
@@ -65,7 +65,7 @@ h1{
     text-shadow: 2px 2px 1px goldenrod;
 }
 
-.nomCreatures{
+.nomDieux{
     font-size: 2em;
     text-shadow: 1px 2px 1px goldenrod;
 }
